# pure-transition

./: LICENSE  README.md  default.nix  pure-transition.cabal
src/Pure/: Transition.hs
src/Pure/Transition/: Group.hs  Transitions.hs  Utils.hs
