name:                pure-transition
version:             0.7.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >=4.9,
    pure >= 0.7 && < 1,
    pure-css >= 0.7 && < 1,
    pure-cond >= 0.7 && < 1,
    pure-theme >= 0.1 && < 1,
    pure-styles >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    pure-prop >= 0.7 && < 1
  exposed-modules: 
    Pure.Transition
    Pure.Transition.Utils
  hs-source-dirs:      src
  default-language:    Haskell2010
